--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Navbar */
 
-.nav{
+.nav {
     background-color: #f5f3f3;
 }
 
@@ -29,14 +29,57 @@
     background: linear-gradient(135deg, #0d6093, #138bd5);
 }
 
+.navbar-content {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.nav-menu {
+    display: flex;
+    align-items: center;
+    padding-left: 250px;
+    gap: 0;
+}
+
+.nav-menu ul {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-menu li {
+    margin: 0;
+    padding: 0;
+}
+
+.nav-menu li:nth-child(1) {
+    margin-right: 32px;
+}
+
+.nav-menu li:nth-child(2) {
+    margin-right: 32px;
+}
+
+.nav-menu li:nth-child(3) {
+    margin-right: 0;
+}
+
+.cta-container {
+    margin-left: 32px;
+}
+
 main {
     margin-top: 80px;
 }
 
 body {
     background-color: #0d6093;
-     font-family: 'Inter', sans-serif;
+    font-family: 'roboto', sans-serif;
 }
+
+/* Home Section */
 
 .homesection {
     color: #ffffff;
@@ -73,6 +116,7 @@ body {
     align-items: start;
     width: 100%;
 }
+
 .homesection-image {
     max-width: 1200px;
     display: flex;
@@ -188,5 +232,17 @@ body {
     .homesection {
         grid-template-columns: 1fr;
         text-align: center;
+    }
+
+     .nav-links li:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 0.5rem;
+    }
+
+    .nav-menu {
+        display: flex;
+        align-items: center;
+        padding-left: 100px;
+        gap: 0;
     }
 }
