--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -188,10 +188,31 @@ body {
     line-height: 1.6;
 }
 
+/* About Section */
+
+.aboutsection {
+    padding: 100px 50px;
+    text-align: center;
+    min-height: calc(100vh - 80px);
+}
+
+.aboutsection h1 {
+    font-size: 3.5rem;
+    margin-bottom: 3rem;
+    font-weight: 700;
+    color: white;
+    text-align: center;
+}
+
+
+
 /* Form Section */
 .formsection {
     padding: 100px 50px;
     text-align: center;
+    color: #ffffff;
+    background-color: #138bd5;
+    min-height: calc(100vh - 80px);
 }
 
 .formsection h1 {
